--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -87,7 +87,22 @@
          <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="" />
       </section>
 
-      About Services Projects Contact
-      <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
+      <footer class="contact container" id="contact">
+         <img src="./images/logo-footer.svg" alt="logo" />
+         <ul class="contact__links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#projects">Projects</a></li>
+         </ul>
+         <ul>
+            <li class="contact__social">
+               <a href="#"><img src="./images/icon-facebook.svg" alt="" /></a>
+               <a href="#"><img src="./images/icon-instagram.svg" alt="" /></a>
+               <a href="#"><img src="./images/icon-twitter.svg" alt="" /></a>
+               <a href="#"><img src="./images/icon-pinterest.svg" alt="" /></a>
+            </li>
+         </ul>
+         <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">David Moreira</a>.</div>
+      </footer>
    </body>
 </html>
