--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -14,7 +14,10 @@
       <header class="container">
          <nav class="menu">
             <a href="./index.html"><img src="./images/logo.svg" alt="sunnyside logo" /></a>
-            <ul>
+            <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+               <span id="mobile-icon"></span>
+            </button>
+            <ul class="menu__links">
                <li><a href="#about">About</a></li>
                <li><a href="#services">Services</a></li>
                <li><a href="#projects">Projects</a></li>
@@ -28,27 +31,42 @@
          <div class="about__content">
             <h2>Transform your brand</h2>
             <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
-            <span>Learn more</span>
+            <a href="#" class="detail detail1">Learn more</a>
          </div>
-         <img src="./images/desktop/image-transform.jpg" alt="a egg with a yellow background" />
-         <img src="./images/desktop/image-stand-out.jpg" alt="a pink glass" />
+
+         <picture id="img-transform">
+            <source srcset="./images/desktop/image-transform.jpg" media="(min-width: 500px)" />
+            <img src="./images/mobile/image-transform.jpg" alt="a egg with a yellow background" />
+         </picture>
+
+         <picture>
+            <source srcset="./images/desktop/image-stand-out.jpg" media="(min-width: 500px)" />
+            <img src="./images/mobile/image-stand-out.jpg" alt="a pink glass" />
+         </picture>
+
          <div class="about__content">
             <h2>Stand out to the right audience</h2>
             <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
-            <span>Learn more</span>
+            <a href="#" class="detail">Learn more</a>
          </div>
       </main>
 
       <section class="services container" id="services">
          <div class="services__content">
-            <img src="./images/desktop/image-graphic-design.jpg" alt="" />
+            <picture>
+               <source srcset="./images/desktop/image-graphic-design.jpg" media="(min-width: 400px)" />
+               <img src="./images/mobile/image-graphic-design.jpg" alt="" />
+            </picture>
             <div class="services__content__text text-graphic">
                <h3>Graphic design</h3>
                <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
             </div>
          </div>
          <div class="services__content">
-            <img src="./images/desktop/image-photography.jpg" alt="" />
+            <picture>
+               <source srcset="./images/desktop/image-photography.jpg" media="(min-width: 400px)" />
+               <img src="./images/mobile/image-photography.jpg" alt="" />
+            </picture>
             <div class="services__content__text text-photo">
                <h3>Photography</h3>
                <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
@@ -80,11 +98,23 @@
          </ul>
       </section>
 
-      <section class="projects container">
-         <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="" />
-         <img src="./images/desktop/image-gallery-orange.jpg" alt="" />
-         <img src="./images/desktop/image-gallery-cone.jpg" alt="" />
-         <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="" />
+      <section class="projects container" id="projects">
+         <picture>
+            <source srcset="./images/desktop/image-gallery-milkbottles.jpg" media="(min-width: 720px)" />
+            <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="" />
+         </picture>
+         <picture>
+            <source srcset="./images/desktop/image-gallery-orange.jpg" media="(min-width: 720px)" />
+            <img src="./images/mobile/image-gallery-orange.jpg" alt="" />
+         </picture>
+         <picture>
+            <source srcset="./images/desktop/image-gallery-cone.jpg" media="(min-width: 720px)" />
+            <img src="./images/mobile/image-gallery-cone.jpg" alt="" />
+         </picture>
+         <picture>
+            <source srcset="./images/desktop/image-gallery-sugarcubes.jpg" media="(min-width: 720px)" />
+            <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="" />
+         </picture>
       </section>
 
       <footer class="contact container" id="contact">
@@ -104,5 +134,6 @@
          </ul>
          <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">David Moreira</a>.</div>
       </footer>
+      <script src="./js/script.js"></script>
    </body>
 </html>
