--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet" />
       <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-      <title>Frontend Mentor | Sunnyside agency landing page</title>
+      <title>Frontend Mentor | Sunnyside</title>
       <link rel="stylesheet" href="./style/style.css" />
    </head>
    <body>
