Atualização de links

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -126,10 +126,10 @@
          </ul>
          <ul>
             <li class="contact__social">
-               <a href="#"><img src="./images/icon-facebook.svg" alt="" /></a>
-               <a href="#"><img src="./images/icon-instagram.svg" alt="" /></a>
-               <a href="#"><img src="./images/icon-twitter.svg" alt="" /></a>
-               <a href="#"><img src="./images/icon-pinterest.svg" alt="" /></a>
+               <a href="https://facebook.com" target="_blank"><img src="./images/icon-facebook.svg" alt="" /></a>
+               <a href="https://instagram.com" target="_blank"><img src="./images/icon-instagram.svg" alt="" /></a>
+               <a href="https://twitter.com" target="_blank"><img src="./images/icon-twitter.svg" alt="" /></a>
+               <a href="https://pinterest.com" target="_blank"><img src="./images/icon-pinterest.svg" alt="" /></a>
             </li>
          </ul>
          <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">David Moreira</a>.</div>
